--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,23 +15,27 @@ build:
 
 requirements:
   host:
-    - python >=3.5
+    - python >=3.6
     - pip
   run:
-    - python >=3.5
-    - libpysal
-    - numpy
-    - scipy
-    - spreg
+    - python >=3.6
+    - libpysal >=4.0.0
+    - numpy >=1.3
+    - scipy >=0.11
+    - spreg >=1.0.4
 
 test:
   imports:
     - spglm
+  commands:
+    - pip check
+  requires:
+    - pip
 
 about:
   home: https://github.com/pysal/spglm
   license: BSD-3-Clause
-  license_file: {{ environ["RECIPE_DIR"] }}/LICENSE
+  license_file: LICENSE
   summary: Sparse generalized linear models
 
 extra:
